Html addition. Trying to fix bugs.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	    <footer>
 		    <p>Use the left mouse button to click on tiles and reveal them, whether they are bombs or empty. Use the right mouse button to toggle marks on tiles (this does not click them). Use the center mouse button to click on all tiles around a numbered tile once the number of marks around it is the same as the labeled number.</p>
 		    <p>Once you hit a bomb, you lose. If you manage to leave only the bombs unclicked, you win the game!</p>
+		    <p>Press space to restart at any time.</p>
 	    </footer>
 	</body>
 </html>
